# action-ruff

./: README.md  action.yml  pyproject.toml  script.sh
.github/workflows/: depup.yml  release.yml  reviewdog.yml
testdata/: error.py  test.py
